# gitignore-gen

./: .coverage  .gitignore  README.md  coverage.xml  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.jules/: env_setup.sh
conductor/: ephemeral-plan.md  functional-test-plan.md  fzf-plan.md  local-source-plan.md  order-plan.md  pipeline-cli-plan.md  repo-plan.md  source-abstraction-plan.md  subcommands-plan.md
examples/: compose-gitignore.sh  gitattributes-usage.sh  local-overrides.sh
src/gitignore_gen/: cli.py
src/vcs_gen/: cli.py
tests/: conftest.py  test_selection.py
tests/functional/: test_cli.py  test_remote.py
tests/unit/: test_cli_internals.py  test_failures.py  test_github_source.py  test_local_archive.py  test_security.py  test_selection.py
