[project]
name = "gitignore-gen"
version = "0.1.0"
description = "A zero-dependency tool to compose .gitignore files from remote template repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mkobit" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
gitignore-gen = "gitignore_gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==6.0.0",
    "ruff==0.15.11",
    "ty==0.0.32",
    "pyright==1.1.408",
    "python-semantic-release==9.21.0",
]

[tool.uv]
managed = true
package = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "S",
    "C4",
    "PTH",
    "RUF",
    "SIM",
    "PL",
    "TRY",
    "DTZ",
    "PERF",
    "FLY",
    "PIE",
    "FA",
    "ASYNC",
    "LOG",
    "G",
    "T20",
    "RET",
    "SLF",
    "SLOT",
    "TID",
    "TCH",
    "ARG",
    "PGH",
    "FURB",
    "PYI",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "ARG001",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = true

[tool.semantic_release]
version_variable = ["src/gitignore_gen/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "uv build"
